k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forecast-api
  namespace: energy-forecast
  labels:
    app: forecast-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: forecast-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: forecast-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: api
          image: ghcr.io/mohsensoleimanis/energy-demand-forecasting-mlops-system/serving:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: forecast-api-service
  namespace: energy-forecast
spec:
  selector:
    app: forecast-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
